# LitRelevanceAI

./: .env.example  250515 revised.py  ABSTRACT_IMPROVEMENTS.md  AGENTS.md  AI_ASSISTANT_FIX_TESTING_GUIDE.md  CLAUDE.md  CODE_QUALITY_ACTION_PLAN.md  Chinese_README.md  DEPENDENCY_FIX.md  DESIGN_REVIEW_FIX_PLAN.md  IMPLEMENTATION_PROGRESS.md  LitRelevance.py  PRIORITY_FIXES.md  README.md  TEST_AI_ASSISTANTS.md  [Chinese] 文献相关度.py  abstractScreener  abstractScreener.py  pdfScreener.py  prompts_config.json  pyproject.toml  questions_config.json  run_gui.py  setup.cfg  test_abstract_save_fix.py  test_ai_dialogs.py  test_dependency_fix.py  文献相关度.py
configs/: config.yaml
docs/: AI_ASSISTED_CONFIG_DESIGN.md  AI_ASSISTED_CONFIG_IMPLEMENTATION_PLAN.md  ARCHITECTURE.md  DOCUMENTATION_AUDIT.md  GPT5_GUIDE.md  项目功能与架构概览.md
examples/: gpt5_example.py
litrx/: __init__.py  __main__.py  abstract_screener.py  ai_client.py  ai_config_generator.py  cache.py  cli.py  config.py  config_factory.py  constants.py  csv_analyzer.py  exceptions.py  i18n.py  key_manager.py  logging_config.py  matrix_analyzer.py  pdf_screener.py  preset_manager.py  progress_manager.py  prompt_builder.py  resources.py  security_utils.py  task_manager.py  tk_compat.py  token_tracker.py  utils.py
litrx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
packaging/: build_mac.sh  build_win.bat
scripts/: run_ai_assistant_tests.py
tests/: conftest.py  test_abstract_verification.py  test_ai_assistants.py  test_ai_client_dependencies.py  test_ai_config_generator.py  (+4 more)
(+36 files in other folders)
