[metadata]
name = litrx
version = 0.1.0

[options]
packages = find:
install_requires =
    pandas
    openai>=1.14.0
    httpx>=0.27,<0.28
    httpx>=0.27.0
    tqdm
    openpyxl
    pyyaml
    pypdf
    keyring
    pydantic>=2.0
    filelock>=3.12.0
    PyQt6>=6.6.0

[options.entry_points]
console_scripts =
    litrx = litrx.cli:main
